Update Home Page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1812,24 +1812,110 @@ body {
 .cid-rscAj3aYz5 .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rscB4vGq4J {
+.cid-rshpgtuxJy {
+  background-image: url("../../../assets/images/mbr-1920x1278.jpg");
+}
+.cid-rshpgtuxJy H1 {
+  text-align: center;
+}
+.cid-rshqF5sQPH {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1920x1282.jpg");
+  background-color: #ffffff;
 }
-.cid-rscB4vGq4J .mbr-figure {
-  margin: 0 auto;
-  width: 100%;
+.cid-rshqF5sQPH h2 {
+  text-align: center;
+}
+.cid-rshqF5sQPH h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rshqF5sQPH p {
+  color: #767676;
+}
+.cid-rshqF5sQPH img {
+  object-fit: cover;
+}
+.cid-rshqF5sQPH .block-content {
   display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
 }
-.cid-rscB4vGq4J .mbr-figure img {
-  height: 100%;
-  margin: 0 auto;
+.cid-rshqF5sQPH .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-rshqF5sQPH .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+.cid-rshqF5sQPH .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rshqF5sQPH .card-title {
+  font-weight: 500;
+}
+.cid-rshqF5sQPH .card-img {
+  text-align: inherit;
+}
+.cid-rshqF5sQPH .card-img span {
+  font-size: 48px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rshqF5sQPH .mbr-figure {
+    padding-right: 2rem;
+    padding-left: 2rem;
+    height: 100%;
+  }
 }
 @media (max-width: 991px) {
-  .cid-rscB4vGq4J .mbr-figure img {
-    width: 100% !important;
+  .cid-rshqF5sQPH .mbr-figure {
+    padding-bottom: 2rem;
+    padding-top: 1rem;
   }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-rshqF5sQPH .block-content {
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    text-align: center;
+  }
+  .cid-rshqF5sQPH .block-content .card {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+  }
+  .cid-rshqF5sQPH .card:nth-child(1) {
+    padding-bottom: 0!important;
+  }
+}
+.cid-rshqMagA3T .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-rshqMagA3T .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-rshqMagA3T .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-rshqMagA3T .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-rshqMagA3T .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
